--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,15 @@
   height: 71px;
   margin: 20px auto;
   padding: 0 50px;
+  color : white;
   background-color: rgb(82, 206, 223);
   font-size: 40px;
   font-family: 'Hi Melody', cursive;
   border-radius: 40px;
   box-shadow: -4px 5px grey;
+}
+button:focus{
+outline:0;
 }
 .options{
   width: 500px;
@@ -19,13 +23,13 @@
 }
 .title {
   display: flex;
-  margin: 50px auto;
+  margin: 29px auto;
 }
-
-
-
 #gameBoard{
   display: flex;
   justify-content: flex-end;
 
+}
+video{
+  margin: 20px 51px;
 }
